...
        scrollEventThrottle={16}
        pagingEnabled={true}
        showsHorizontalScrollIndicator={false}
        onScroll={(event: any) => {
          setSliderPage(event);
        }}
        testID={'welcome_pages_scrollview'}
      >
        <View style={styles.component} testID={'welcome_page1'}>
          <Text style={[textStyles.blueJosefinHeading, styles.title]}>
            Welcome to Slurp!
          </Text>
          <CoffeeShopSvg style={[styles.circle]} />
...
            onPress={proceedToSignUp}
          />
          <Text
            style={[textStyles.bluePoppinsBody, styles.footer]}
            onPress={proceedToLogIn}
          >
            Already have an account? Log in
          </Text>
        </View>
      </ScrollView>
      <View style={styles.paginationWrapper}>
        {Array.from(Array(3).keys()).map((key, index) => (
          <View
...
